<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inflate_job_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/joblist_box_blue"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/inflate_job_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/inflate_job_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/inflate_job_date"
            android:gravity="center_vertical"
            android:paddingRight="5dip"
            android:singleLine="true"
            android:text="@string/job_type"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/inflate_job_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lines="2"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/job_description"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/inflate_job_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_location"
        android:drawablePadding="5dip"
        android:gravity="center_vertical"
        android:padding="10dip"
        android:text="@string/job_location"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

</LinearLayout>