<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchJob" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/search_job_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/addmob_api_key" >
    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/search_job_adView"
        android:background="@drawable/main_bg1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/search_job_top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbar2" >

            <Button
                android:id="@+id/search_job_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/top_butt_list_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/job_search"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_job_top_bar_layout"
            android:layout_margin="15dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/search_job_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/form_text_field_yellow"
                android:gravity="center_vertical"
                android:hint="@string/country"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:singleLine="true"
                android:textColor="@color/login_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/search_job_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/form_text_field_pink"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/state"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:singleLine="true"
                android:textColor="@color/login_text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/search_job_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/form_text_field_green"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:singleLine="true"
                android:textColor="@color/login_text_color"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/search_job_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/form_text_field_blue"
                android:gravity="center_vertical"
                android:hint="@string/pin_optional"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:singleLine="true"
                android:textColor="@color/login_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/search_job_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/butt_bottom"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>