<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SubmitJob" >

    <com.google.android.gms.ads.AdView
        android:id="@+id/submit_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/addmob_api_key" >
    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_adView"
        android:background="@drawable/main_bg1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/submit_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbar2" >

            <Button
                android:id="@+id/submit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/top_butt_list_selector" />

            <TextView
                android:id="@+id/submit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/post_your_job"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/submit_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/butt_bottom"
            android:text="@string/submit_job"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/submit_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/submit_job"
            android:layout_below="@+id/submit_header_layout" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/submit_job_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_text_field_green"
                    android:gravity="center_vertical"
                    android:hint="@string/job_type"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="60"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/submit_job_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_large_blue"
                    android:gravity="top|left"
                    android:hint="@string/job_description"
                    android:inputType="textMultiLine"
                    android:maxLength="400"
                    android:padding="5dip"
                    android:singleLine="false"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_pink"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/submit_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:paddingLeft="5dip"
                        android:textColor="@color/currency_color"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/submit_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:hint="@string/amount"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="6"
                        android:paddingLeft="5dip"
                        android:paddingRight="5dip"
                        android:singleLine="true"
                        android:textColor="@color/login_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/submit_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_yellow"
                    android:gravity="center_vertical"
                    android:hint="@string/country"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/submit_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_green"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/state"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/submit_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_blue"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:hint="@string/city"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/submit_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_pink"
                    android:gravity="center_vertical"
                    android:hint="@string/pin"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/submit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_text_field_yellow"
                    android:gravity="center_vertical"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:maxLength="40"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>